--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <header>
   <div class="encabezadoPadre">
-    <img src="imagenes/pokemon-go.jpg" class="cabecera" id="logo">
+    <img src= url(imagenes/pokemon-go.jpg) class="cabecera" id="logo">
     <img src="imagenes/pikachu.png" class="cabecera" id="pikachu">
     <!-- <button class="cabecera" id="filtrar">hola</button>-->
   </div>
