--- a/src/index.html
+++ b/src/index.html
@@ -21,6 +21,7 @@
         <a id="A-Z">Ordenar de la A - Z</a>
         <a id="Z-A">Ordenar de la Z - A</a>
       </div>
+      <input type=”button” id="home" placeholder="Home"></input>
     </div>
   </div>
 
