--- a/src/index.html
+++ b/src/index.html
@@ -21,12 +21,13 @@
         <a id="A-Z">Ordenar de la A - Z</a>
         <a id="Z-A">Ordenar de la Z - A</a>
       </div>
-      <input type=”button” id="home" placeholder="Home"></input>
+      <input type=”button” class="inicio" id="home" placeholder="Home"></input>
+      
     </div>
   </div>
 
   <div class="slogan"> <img src="imagenes/atrapalos2.png" id="sloganid">
-
+    
 
   </div>
 </header>
@@ -34,10 +35,23 @@
 
   
 <body>
+  <!-- Trigger/Open The Modal -->
+<!--<button id="myBtn">Open Modal</button>-->
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <p>Some text in the Modal..</p>
+  </div>
+
+</div>
 
   <article class="searcher">
     <input type="search" id="search" placeholder="Search by name" autocomplete="off" spellcheck="false" />
-    <button id="botonBuscar">Buscar</button>
+   
   </article>
  <!-- <button id="myBtn">Open Modal</button>
 
