Commit con los últimos cambios, se quitó paja y se afinó el buscador de tipo.

--- a/src/index.html
+++ b/src/index.html
@@ -44,9 +44,9 @@
         </select>
       </div>
 
-      <div class="dropdown">
-        <button class="dropbtn">Ordenar</button>
-        <div class="dropdown-content">
+      <div class="ordenado">
+        <button class="ordenbtn">Ordenar</button>
+        <div class="orden-content">
           <a id="A-Z">Ordenar de la A - Z</a>
           <a id="Z-A">Ordenar de la Z - A</a>
         </div>
@@ -62,15 +62,7 @@
 
 </header>
 
-
-
 <body>
-  <!-- <div id="myModal" class="modal">
-  <div class="modal-content">
-    <span class="close">&times;</span>
-  </div> 
-
-</div>-->
 
   <main>
     <div id="contenedorPadre">
@@ -83,7 +75,7 @@
   </main>
 
   <footer>
-    <p>Poyecto desarrollado por Silvana González y Karla García<br>
+    <p>Proyecto desarrollado por Silvana González y Karla García<br>
       Laboratoria DEV-001</p>
   </footer>
 
